test/mutation_analysis/s0342_power_of_four/hafis/ablation_o3_r50/mutants/2/result.txt
./test/mutation_analysis/s0342_power_of_four/hafis/ablation_o3_r50/mutants/2/Solution.java:18: error: unreachable statement
        return n == 1;
        ^
1 error
